opt:添加docker打包示例